1999-10-31  Ben Elliston  <bje@cygnus.com>

	* testsuite/autoconf.s/defines.exp: Changed `fail' and `pass' in
	`xfail' and `xpass'. The testsuite checks that acconfig.h
	templates the AC_DEFINEs. Since we no longer rely on acconfig.h,
	the test is obsolete.
	* acspecific.m4 (AC_PROG_BINSH, AC_PROG_SED): Don't quote the name
	of the macro defined; the testsuite does not recognize this
	syntax. From Akim Demaille <akim@epita.fr>.

1999-10-27  Ben Elliston  <bje@cygnus.com>

	* THANKS: Updated Alexandre's address.

	* autoconf.texi (Generic Programs): @defmac for AC_PATH_TOOL may
	not span multiple lines.

1999-10-26  Ben Elliston  <bje@cygnus.com>

	* INSTALL: Regenerate.

1999-10-16  Ben Elliston  <bje@cygnus.com>

	* acspecific.m4 (AC_PROG_CXX): gcc is not a C++ compiler.
	* autoconf.texi (AC_PROG_CXX): Update documentation.

1999-10-13  Ben Elliston  <bje@cygnus.com>

	* acconfig.h: Reintroduce missing definitions due to testsuite
	regressions.

	* autoconf.texi (Configuration Headers): Document the potential
	trouble caused by autoheader and boilerplate files. Fix for
	PR autoconf/45.

1999-10-07  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* Makefile.in (dist): Fixed for srcdir != objdir.

1999-10-07  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_CHECK_HEADER_DIRENT): Reintroduce its
	AC_DEFUN.

1999-10-06  Akim Demaille  <akim@epita.fr>

	* acspecific.m4: Various formatting changes.
	* acspecific.m4 (AC_PROG_CC_WORKS): Declare main returns an int.

1999-10-05  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	Shell meta characters in an argument causes the configure script
	to freak out and generate a config.status file that contains
	syntax errors.
	Bug triggered by ./configure --with-foobar=\''`"$'.

	* acgeneral.m4 (AC_INIT_PARSE_ARGS): Quote single quotes that end
	up between single quotes.  Protect arguments of echo with double
	quotes.
	(AC_INIT_PREPARE): Likewise.
	(AC_PATH_PROG): Protect argument of test.